--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 </head>
 
 <body>
-  <ul class="nav justify-content-end navbar-light">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">portfolio</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">about</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">resume</a>
-    </li>
-  </ul>
+    <ul class="nav justify-content-end navbar-light">
+        <li class="nav-item">
+            <a class="nav-link active" href="index.html">portfolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="about.html">about</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3Ac551ef81-e736-4236-bd6d-65bb066250cc">resume</a>
+        </li>
+    </ul>
   <h1>Hi, I'm <span style="color:#F5554E;">Isabella</span>.</h1>
   <br>
   <h2>I'm a 3rd year student currently studying Computer Science at Brown University. </h2>
