Changed pdf link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="nav-link" href="about.html">about</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3Ac551ef81-e736-4236-bd6d-65bb066250cc">resume</a>
+            <a class="nav-link" href="Isabella_Ting_resume.pdf">resume</a>
         </li>
     </ul>
   <h1>Hi, I'm <span style="color:#F5554E;">Isabella</span>.</h1>
