--- a/medium.html
+++ b/medium.html
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link"
-                href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3Ac551ef81-e736-4236-bd6d-65bb066250cc">resume</a>
+                href="Isabella_Ting_resume.pdf">resume</a>
         </li>
     </ul>
 
@@ -31,9 +31,9 @@
     <br>
     <br>
     <figure class="center">
-            <img src="minesweeper_main.jpeg" class="figure-img img-fluid rounded"
-                alt="A generic square placeholder image with rounded corners in a figure.">
-        </figure>
+        <img src="minesweeper_main.jpeg" class="figure-img img-fluid rounded"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+    </figure>
     <br>
     <h2>On Minesweeper</h2>
     <br>
@@ -50,75 +50,92 @@
     <h4>Why no one knows how to play Minesweeper. </h4>
 
     <div class="panel panel-default">
-    Unlike many games and features built by corporations today, Minesweeper was built during a time where developers and
-    computer scientists were largely hobbyists at heart. The first iterations of Minesweeper as we know it was built by
-    Robert Donner who was hired by Microsoft in 1989. Originally a programming exercise by Donner, it’s now one of the
-    most iconic computer games next to the likes of Pong and Tetris.
-    Donner noted that, while he worked for the company, Minesweeper was written by himself, in his own time, and freely
-    distributed within the company. It was a hobby that followed years of development, changing through some of the
-    earliest forms of AB testing (watching his friends play the game) and never followed strict timelines or budgets. It
-    was, however, a rare case of when an intended audience eventually emerged, and the game developed a new function
-    while the functionality itself remained. Minesweeper was selected for release on Windows 3.1 in 1992 as a tool to
-    get users used to right-clicking by placing down flags.
+        Unlike many games and features built by corporations today, Minesweeper was built during a time where developers
+        and
+        computer scientists were largely hobbyists at heart. The first iterations of Minesweeper as we know it was built
+        by
+        Robert Donner who was hired by Microsoft in 1989. Originally a programming exercise by Donner, it’s now one of
+        the
+        most iconic computer games next to the likes of Pong and Tetris.
+        Donner noted that, while he worked for the company, Minesweeper was written by himself, in his own time, and
+        freely
+        distributed within the company. It was a hobby that followed years of development, changing through some of the
+        earliest forms of AB testing (watching his friends play the game) and never followed strict timelines or
+        budgets. It
+        was, however, a rare case of when an intended audience eventually emerged, and the game developed a new function
+        while the functionality itself remained. Minesweeper was selected for release on Windows 3.1 in 1992 as a tool
+        to
+        get users used to right-clicking by placing down flags.
 
-    <figure class="center" style = "margin-left:440px;">
-        <img src="minesweeper1.jpeg" class="figure-img img-fluid rounded"
-            alt="A generic square placeholder image with rounded corners in a figure.">
-        <figcaption class="figure-caption">No instructions in sight!</figcaption>
-    </figure>
+        <figure class="center" style="margin-left:440px;">
+            <img src="minesweeper1.jpeg" class="figure-img img-fluid rounded"
+                alt="A generic square placeholder image with rounded corners in a figure.">
+            <figcaption class="figure-caption">No instructions in sight!</figcaption>
+        </figure>
 
-    From the perspective of a hobby project, the interface of the classic Minesweeper made sense. The familiarity of the
-    game internally may have been overlooked when it was distributed. No instructions appear when you first click into
-    the game. The interface itself is simple; a yellow smiley stares back at you above an 8x8 grid of squares. Here,
-    bevelled squares give the impression that the pieces are raised and button-like. At the top of the window were two
-    options: Game and Help. The underlined(here bolded)letters indicated the keyboard shortcuts associated with the
-    tabs. The designers of Minesweeper clearly thought that the users would be accessing these tabs fairly often.
-    <figure class="center" style = "margin-left:440px;">
+        From the perspective of a hobby project, the interface of the classic Minesweeper made sense. The familiarity of
+        the
+        game internally may have been overlooked when it was distributed. No instructions appear when you first click
+        into
+        the game. The interface itself is simple; a yellow smiley stares back at you above an 8x8 grid of squares. Here,
+        bevelled squares give the impression that the pieces are raised and button-like. At the top of the window were
+        two
+        options: Game and Help. The underlined(here bolded)letters indicated the keyboard shortcuts associated with the
+        tabs. The designers of Minesweeper clearly thought that the users would be accessing these tabs fairly often.
+        <figure class="center" style="margin-left:440px;">
             <img src="mine_menu.jpeg" class="figure-img img-fluid rounded">
             <figcaption class="figure-caption">The game menu, no instructions here!</figcaption>
         </figure>
 
-    So why is it that everyone recognises the game, but so few people know how to play it? The reason likely lies behind
-    how the rules of the game were presented. Or rather, how they were never presented in the first place. When first
-    seeing the interface, the instinct of anyone would be to click any box on the grid. Instantly, the counter begins
-    counting up, increasing urgency. On the grid itself, a grey box, sometimes with a number, is revealed, causing a
-    chunk of boxes around it to also uncover. Despite all the new information that appears on the board, not much is
-    useful in learning how to play the game.
-    One might’ve tried to right-click at one point and noticed a red flag being placed. But there were never any
-    affordances involved beyond right-clicking on a box. One would largely learn the game through trial and error. When
-    clicking on a square with a bomb however, the interface lets the user know with cues that this is a “game over”
-    event. Explosions are heard, the smiley face turns into the classic x’d out eyes, and all the locations of bombs
-    appear on the map. You might be able to infer from the numbers how to play, but if you didn’t make it far into the
-    game to reveal enough squares with numbers, this was a difficult task.
-    <figure class="center">
+        So why is it that everyone recognises the game, but so few people know how to play it? The reason likely lies
+        behind
+        how the rules of the game were presented. Or rather, how they were never presented in the first place. When
+        first
+        seeing the interface, the instinct of anyone would be to click any box on the grid. Instantly, the counter
+        begins
+        counting up, increasing urgency. On the grid itself, a grey box, sometimes with a number, is revealed, causing a
+        chunk of boxes around it to also uncover. Despite all the new information that appears on the board, not much is
+        useful in learning how to play the game.
+        One might’ve tried to right-click at one point and noticed a red flag being placed. But there were never any
+        affordances involved beyond right-clicking on a box. One would largely learn the game through trial and error.
+        When
+        clicking on a square with a bomb however, the interface lets the user know with cues that this is a “game over”
+        event. Explosions are heard, the smiley face turns into the classic x’d out eyes, and all the locations of bombs
+        appear on the map. You might be able to infer from the numbers how to play, but if you didn’t make it far into
+        the
+        game to reveal enough squares with numbers, this was a difficult task.
+        <figure class="center">
             <img src="mine_lose.jpeg" class="figure-img img-fluid rounded">
         </figure>
 
-    In reality, the rules of the game are simple. Numbers on squares were just an indication of the number of bombs
-    surrounding that square. Flags helped the player mark and remember the location of bombs. These simple rules were
-    easy to memorize and apply; learning them seemed to be a challenge.
-    So how might we change the interface to make it easier to learn? Here’s one of my suggestions:
-    <figure class="center">
+        In reality, the rules of the game are simple. Numbers on squares were just an indication of the number of bombs
+        surrounding that square. Flags helped the player mark and remember the location of bombs. These simple rules
+        were
+        easy to memorize and apply; learning them seemed to be a challenge.
+        So how might we change the interface to make it easier to learn? Here’s one of my suggestions:
+        <figure class="center">
             <img src="mine_sugg1.png" class="figure-img img-fluid rounded">
         </figure>
-    But on a serious note, a change that could help is a better immediate visual indicator that a mine is present like
-    the image below. Immediately after your first click, a square surrounded by 1’s appears. Clicking on this square
-    would reveal a bomb. The user can then make a connection between a square surrounded by 1’s to be a square with a
-    bomb, and subsequently the numbers to be the number of bombs around a square.
+        But on a serious note, a change that could help is a better immediate visual indicator that a mine is present
+        like
+        the image below. Immediately after your first click, a square surrounded by 1’s appears. Clicking on this square
+        would reveal a bomb. The user can then make a connection between a square surrounded by 1’s to be a square with
+        a
+        bomb, and subsequently the numbers to be the number of bombs around a square.
 
-    <figure class="center">
+        <figure class="center">
             <img src="mine_sugg2.png" class="figure-img img-fluid rounded">
         </figure>
-    Another change that could work would be to reveal the whole board once a player reaches game over, which they
-    inevitably will on their first play.
-    <figure class="center">
+        Another change that could work would be to reveal the whole board once a player reaches game over, which they
+        inevitably will on their first play.
+        <figure class="center">
             <img src="mine_sugg3.png" class="figure-img img-fluid rounded">
         </figure>
-</div>
-<br>
-<br>
-<br>
-<br>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
 
