--- a/pypawn.html
+++ b/pypawn.html
@@ -15,17 +15,16 @@
 <body text=color: #848482;>
     <!-- Navigation Bar -->
     <ul class="nav justify-content-end navbar-light">
-        <li class="nav-item">
-            <a class="nav-link active" href="index.html">portfolio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="about.html">about</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-                href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3Ac551ef81-e736-4236-bd6d-65bb066250cc">resume</a>
-        </li>
-    </ul>
+            <li class="nav-item">
+                <a class="nav-link active" href="index.html">portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">about</a>
+            </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="Isabella_Ting_resume.pdf">resume</a>
+                </li>
+        </ul>
     <br>
     <h1>PyPawn: using transfer learning to identify chess pieces to create a digital board. </h1>
     <br>
