--- a/medium.html
+++ b/medium.html
@@ -19,11 +19,7 @@
             <a class="nav-link active" href="index.html">portfolio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="about.html">about</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-                href="Isabella_Ting_resume.pdf">resume</a>
+            <a class="nav-link" href="Isabella_Ting_resume.pdf">resume</a>
         </li>
     </ul>
 
